--- a/styles/style.css
+++ b/styles/style.css
@@ -1,22 +1,36 @@
 html {
     background: linear-gradient(191.97deg, #434343 33.33%, #323232 33.33%, #434343 33.33%);
     box-shadow: inset 0px 10px 50px rgba(0, 0, 0, 0.7);
-    font-family: 'ralewaymedium';
 }
 
-.nav {
+body { 
+    font-family: 'ralewaymedium';
+    color: #FFFFFF;
+}
+
+.container-1{
+    padding:;
+    background: #222222;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.5);
+}
+
+.container {
     display: flex;
-    justify-content: space-evenly;
-    align-items: flex-end;
-    font-family: 'ralewaymedium';
-    font-style: normal;
-    font-weight: 600;
-    
+    justify-content: center;
+    padding: 2rem;
+    gap: 25px; 
+    font-size: 18px;
+}
+
+.container a{
+    text-decoration: none;
     color: #FFFFFF;
 }
 
-.nav a {
-    font-style: normal;
-    text-align: center;
-    color: #FFFFFF;
+.container a:hover{
+    background-image:#1E61CA;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: #1E61CA;
+    transition: all 2s ease;;
 }
