--- a/styles/style.css
+++ b/styles/style.css
@@ -4,14 +4,22 @@ html {
 }
 
 body { 
+    position: relative;
     font-family: 'ralewaymedium';
     color: #FFFFFF;
+    width: 100%;
+    max-width: auto;
+    margin: 0%;
 }
 
-.container-1{
-    padding:;
+.container-1 {
+    padding: 0%;
     background: #222222;
+    margin: 0 auto;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.5);
+    font-family: 'ralewaybold';
+    width: 100%;
+    max-width: auto;
 }
 
 .container {
@@ -22,15 +30,131 @@ body {
     font-size: 18px;
 }
 
-.container a{
+.container a {
     text-decoration: none;
     color: #FFFFFF;
 }
 
 .container a:hover{
-    background-image:#1E61CA;
-    background-clip: text;
+    background: linear-gradient(180deg, #1E61CA 50%, #273671 100%);
     -webkit-background-clip: text;
-    -webkit-text-fill-color: #1E61CA;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
     transition: all 2s ease;;
 }
+
+.main {
+    display: flex;
+    flex-direction: row;
+    margin-top: 50px;
+}
+
+.title {
+    flex-direction: column;
+    line-height: 10px;
+    margin-left: 95px;
+    margin-top: 60px;
+    width: 250px;
+    margin-bottom: 45px;
+}
+
+.title h1 {
+    background: linear-gradient(180deg, #1E61CA 50%, #273671 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+}
+
+.title h1 {
+    font-weight: 200;
+    font-size: 3rem;
+    line-height: 1;
+    margin: 0%;
+    font-family: 'ralewaybold';
+}
+
+
+.p-1 {
+    padding: 1rem 1rem 2rem 6rem;
+    line-height: 50%;
+    max-width: 550px;
+    font-size: 20px;
+}
+
+.img {
+    width: 250px;
+    display: flex;
+    margin-left: 120%;  
+    margin-bottom: 10px;
+    filter: drop-shadow(0px 10px 10px rgba(0, 0, 0, 0.5));
+}
+
+.container-2 {
+    position: absolute;
+    padding: 0%;
+    background: #222222;
+    margin: 0 auto;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.5),0px -10px 10px rgba(0, 0, 0, 0.5);
+    font-family: 'ralewaybold';
+    width: 100%;
+    max-width: auto;
+}
+
+.h1-2 {
+    background: linear-gradient(180deg, #1E61CA 50%, #273671 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+}
+
+.h1-2 {
+    font-weight: 200;
+    font-size: 3rem;
+    line-height: 1;
+    margin-top: 0%;
+    padding-top: 15px;
+    font-family: 'ralewaybold';
+    margin-left: 95px;
+}
+
+.p-2 {
+    margin-left: 95px;
+    margin-right: 40px;
+    padding-bottom: 20px;
+    justify-content: space-between;
+    font-family: 'ralewaymedium';
+}
+
+.p-3 {
+    margin-left: 95px;
+    margin-right: 40px;
+    padding-bottom: 20px;
+    justify-content: space-between;
+    font-family: 'ralewaymedium';
+}
+
+.h1-3 {
+    background: linear-gradient(180deg, #1E61CA 50%, #273671 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+}
+
+.h1-3 {
+    font-weight: 200;
+    font-size: 3rem;
+    line-height: 1;
+    margin-top: 400px;
+    padding-top: 15px;
+    font-family: 'ralewaybold';
+    margin-left: 95px;
+}
+
