--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,10 @@
-html {
-    background: linear-gradient(191.97deg, #434343 33.33%, #323232 33.33%, #434343 33.33%);
-    box-shadow: inset 0px 10px 50px rgba(0, 0, 0, 0.7);
-}
-
 body { 
-    position: relative;
+    background-image: url(/styles/img.css/modern-background-with-lines.jpg) ;
+    box-shadow: inset 0px 10px 50px rgba(0, 0, 0, 0.7);
     font-family: 'ralewaymedium';
     color: #FFFFFF;
-    width: 100%;
-    max-width: auto;
+    width: 0 auto;
+    max-width: 0 auto;
     margin: 0%;
 }
 
@@ -33,6 +29,7 @@ body {
 .container a {
     text-decoration: none;
     color: #FFFFFF;
+    size: 1rem;
 }
 
 .container a:hover{
@@ -42,20 +39,21 @@ body {
     background-clip: text;
     -webkit-text-fill-color: transparent;
     text-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
-    transition: all 2s ease;;
+    transition: all 2s ease;
 }
 
 .main {
     display: flex;
     flex-direction: row;
     margin-top: 50px;
+    max-width: auto;
 }
 
 .title {
     flex-direction: column;
     line-height: 10px;
     margin-left: 95px;
-    margin-top: 60px;
+    margin-top: 10px;
     width: 250px;
     margin-bottom: 45px;
 }
@@ -79,23 +77,45 @@ body {
 
 
 .p-1 {
-    padding: 1rem 1rem 2rem 6rem;
-    line-height: 50%;
+    padding: 0rem 1rem 5rem 6rem;
     max-width: 550px;
     font-size: 20px;
+}
+
+.download {
+    padding-top: 1rem ;
+}
+
+.button {
+    padding: 1rem 2rem 1rem 2rem;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    font-family: 'ralewaymedium';
+    border: none;
+    border-radius: 2px 25px 25px 25px;
+    background: linear-gradient(180deg, #1E61CA 50%, #273671 100%);
+    color: #FFFFFF;
+    filter: drop-shadow( 2px 5px 7px rgba(0, 0, 0, 0.5));
+    margin-bottom: 40px;
+    cursor: pointer;
 }
 
 .img {
     width: 250px;
     display: flex;
     margin-left: 120%;  
-    margin-bottom: 10px;
-    filter: drop-shadow(0px 10px 10px rgba(0, 0, 0, 0.5));
+    margin-top: 20px;
+    border-radius: 50%;
+    border-width: 2px;
+    border-style: solid;
+    border-color: #353535;
+    filter: drop-shadow(0px 10px 10px rgb(0, 0, 0));
 }
 
 .container-2 {
     position: absolute;
-    padding: 0%;
+    padding: 0px;
     background: #222222;
     margin: 0 auto;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.5),0px -10px 10px rgba(0, 0, 0, 0.5);
@@ -152,9 +172,17 @@ body {
     font-weight: 200;
     font-size: 3rem;
     line-height: 1;
-    margin-top: 400px;
-    padding-top: 15px;
+    margin-top: 500px;
+    padding-top: 20px;
     font-family: 'ralewaybold';
-    margin-left: 95px;
+    margin-left: 100px;
 }
 
+.projetos {
+    margin-left: 100px;
+}
+
+.projeto-1{
+    width: 250px;
+    height: 150px;
+}
